<resources>
    <string name="app_name">Konet Pos</string>

    <string name="purchase">Purchase</string>
    <string name="vas">Vas</string>
    <string name="unknown_error">An unknown error has occurred. Please try again later!</string>
    <string name="system_error">Something went wrong. Please try again later</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay">Pay</string>
    <string name="continue_">Continue</string>
    <string name="email_address">"enter email "</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="login_subtitle">Login to your Konetpay account</string>
    <string name="login_title">Welcome Back</string>
    <string name="account_name">Account Name:</string>
    <string name="enter_phonenumber">enter phonenumber</string>
    <string name="enter_pin">enter pin</string>
    <string name="account_balance">Account Balance:</string>
</resources>