<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.konet.konetpos.ui.screen.purchase.PurchaseViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey">

            <TextView
                android:id="@+id/amount_Txt"
                style="@style/heebo_medium_19"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:text="@string/amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/amount_Edt"
                style="@style/standard_text_field"
                android:layout_width="match_parent"
                android:layout_marginStart="26dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/edittext_light_blue"
                android:hint="@string/enter_amount"
                android:inputType="number"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColorHint="@color/grey_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_Txt"
                tools:ignore="Autofill,LabelFor" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_blue_filled"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/continue_"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_Edt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>